--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,6 +23,8 @@
         <button type="submit" class="btn btn-primary">Tìm kiếm</button>
     </form>
 
+    <a th:href="@{/products}" class="btn btn-success mt-1">Thêm sản phẩm</a>
+
     <table class="table table-hover">
         <thead>
         <tr>
